fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,10 @@
 body {
 	font-family: 'Lato', serif;
 	font-weight: 300;
-	color: white;
+	text-align: center;
+	
 	
 	/*background-image:  url(../img/back1.jpg);*/
-	background-color: #515151
     background-size:   cover;                     
     background-repeat: no-repeat;
     background-position: center center;
@@ -77,6 +77,7 @@ right {
     bottom: 0; 
     left: 0;
     width: 100%;
+    background-color: #515151
 }
 
 a {
